--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "firebase": "^10.9.0",
     "next": "14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
