--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "firebase": "^10.9.0",
+    "moment": "^2.30.1",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18",
