--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.14",
     "moment": "^2.30.1",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
