--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "recoil": "^0.7.7"
   },
